# dune-daq-hdf

./: CMakeLists.txt  README.md
cmake/: dune_daq_hdfConfig.cmake.in
dune_daq_hdf/: DaqHdf5File.cpp  DaqHdf5File.hpp
test/: CMakeLists.txt  test_read.cpp
